--- a/ZK/ZKExample01/src/main/webapp/index.zul
+++ b/ZK/ZKExample01/src/main/webapp/index.zul
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<zk xmlns="http://www.zkoss.org/2005/zul"
+    xmlns:h="http://www.w3.org/1999/xhtml"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-<zk xmlns="http://www.zkoss.org/2005/zul">
     <window title="ZK Window" border="normal">
         <label>Hello world from ZKoss Window</label>
     </window>
+
 </zk>
