--- a/ZK/ZKExample02/src/main/webapp/index.zul
+++ b/ZK/ZKExample02/src/main/webapp/index.zul
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<zk xmlns="http://www.zkoss.org/2005/zul"
+    xmlns:h="http://www.w3.org/1999/xhtml"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-<zk xmlns="http://www.zkoss.org/2005/zul">
     <window title="ZK Window" border="normal" apply="ru.gs.zk.MyComposer" >
         <hlayout>
             <label>Запросить отчет с </label>
@@ -24,4 +27,5 @@
             <label id="someElseParam" style="color: blue;" />
         </hlayout>
     </window>
+
 </zk>
